update interceptor within ui-router

--- a/UIRouterSample_3/UIRouterSample_3/app/contacts/contacts.detail.item.edit.html
+++ b/UIRouterSample_3/UIRouterSample_3/app/contacts/contacts.detail.item.edit.html
@@ -1,3 +1,8 @@
 <hr>
 <h4>{{item.type}} <button class="btn" ng-click="done()">Done</button></h4>
-<div><input type="text" ng-model="item.value" /></div>
+
+<div>
+    <form name="form">
+        <input type="text" ng-model="item.value" />
+    </form>
+</div>
