--- a/UIRouterSample_3/UIRouterSample_3/index.html
+++ b/UIRouterSample_3/UIRouterSample_3/index.html
@@ -13,6 +13,9 @@
     <script src="scripts/angular.js"></script>
     <script src="scripts/angular-animate.js"></script>
     <script src="scripts/angular-ui-router.js"></script>
+    <!--<script src="scripts/angular-ui/ui-bootstrap.js"></script>-->
+    <script src="scripts/angular-ui/ui-bootstrap-tpls.js"></script>
+   
 
     <!-- app.js declares the uiRouterSample module and adds items to $rootScope, and defines
          the "home" and "about" states
@@ -29,6 +32,7 @@
     -->
     <script src="app/contacts/contacts-service.js"></script>
     <script src="common/utils/utils-service.js"></script>
+    <script src="app/services/modalService.js"></script>
 
     <!-- could easily use a custom property of the state here instead of 'name' -->
     <title ng-bind="$state.current.name + ' - ui-router'">ui-router</title>
