add solution files

--- a/UIRouter_Extras/UIRouter_Extras/app/index.html
+++ b/UIRouter_Extras/UIRouter_Extras/app/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="statevis.css" />
     <script src="script.js"></script>
+    <script src="services/formServices.js"></script>
 </head>
 <body ng-app="plunk" style="padding-top: 2em;">
     <div ui-view="app"></div>
