--- a/UIRouter_Extras/UIRouter_Extras/app/pages/survey.html
+++ b/UIRouter_Extras/UIRouter_Extras/app/pages/survey.html
@@ -1,11 +1,17 @@
 ﻿<h3>Take this survey</h3>
         How do you like your stuff?
 <br>
-<form name="form">
+
+<div>
+    <form name="form">
+        <input type="text"  />
+    </form>
+</div>
+<!--<form name="form">
     <textarea rows="5" cols="55"></textarea>
 </form>
     <br>
 
     How do you like your things?
     <br>
-    <textarea rows="5" cols="55"></textarea>
+    <textarea rows="5" cols="55"></textarea>-->
