--- a/UIRouter_Extras/UIRouter_Extras/app/pages/survey.html
+++ b/UIRouter_Extras/UIRouter_Extras/app/pages/survey.html
@@ -3,8 +3,8 @@
 <br>
 
 <div>
-    <form name="form">
-        <input type="text"  />
+    <form name="form1">
+        <input type="text" ng-model="feedback" />
     </form>
 </div>
 <!--<form name="form">
