Interceptor, modal pop up and view's states preservation

--- a/UIRouter_Extras/UIRouter_Extras/app/pages/survey.html
+++ b/UIRouter_Extras/UIRouter_Extras/app/pages/survey.html
@@ -7,6 +7,8 @@
         <input type="text" ng-model="feedback" />
     </form>
 </div>
+<br />
+<button class="btn" ng-click="save()">Save</button>
 <!--<form name="form">
     <textarea rows="5" cols="55"></textarea>
 </form>
