--- a/UIRouter_Extras/UIRouter_Extras/app/index.html
+++ b/UIRouter_Extras/UIRouter_Extras/app/index.html
@@ -6,11 +6,17 @@
     <script data-require="ui-router-extras@0.0.13" data-semver="0.0.13" src="https://rawgit.com/christopherthielen/ui-router-extras/0.0.13/release/ct-ui-router-extras.js"></script>
     <script data-require="angular-animate@1.3.16" data-semver="1.3.16" src="https://code.angularjs.org/1.3.16/angular-animate.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.js"></script>
+    <script src="../Scripts/angular-ui/ui-bootstrap-tpls.js"></script>
+
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="statevis.css" />
+    
+
     <script src="script.js"></script>
     <script src="services/formServices.js"></script>
+    <script src="services/modalService.js"></script>
 </head>
+
 <body ng-app="plunk" style="padding-top: 2em;">
     <div ui-view="app"></div>
     <div ui-view="modal" class="modal"></div>
