update modal popup

--- a/UIRouter_Extras/UIRouter_Extras/app/pages/modal.html
+++ b/UIRouter_Extras/UIRouter_Extras/app/pages/modal.html
@@ -1,13 +1,13 @@
-﻿<div class="modal-overlay fade">
+﻿<!--<div class="modal-overlay fade">
     <div class="modal-content">
         <h2>Modal</h2>
         My modal has a substate.  <a ui-sref=".substate">Activate it</a>
         <div ui-view></div>
         <a ui-sref="app">Back to the app...</a>
     </div>
-</div>
+</div>-->
 
-<!--<div class="modal-dialog">
+<div class="modal-dialog">
     <div class="modal-header">
         <h3>{{modalOptions.headerText}}</h3>
     </div>
@@ -18,4 +18,4 @@
         <button type="button" class="btn" data-ng-click="modalOptions.close()">{{modalOptions.closeButtonText}}</button>
         <button class="btn btn-primary" data-ng-click="modalOptions.ok();">{{modalOptions.actionButtonText}}</button>
     </div>
-</div>-->
+</div>
