--- a/UIRouter_Extras/UIRouter_Extras/app/index.html
+++ b/UIRouter_Extras/UIRouter_Extras/app/index.html
@@ -1,15 +1,22 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <script data-require="angular.js@1.3.16" data-semver="1.3.16" src="https://code.angularjs.org/1.3.16/angular.js"></script>
+  
+
+    <script src="../Scripts/angular.js"></script> <!-- version 1.5.3 both must match version-->
+    <script src="../Scripts/angular-animate.js"></script> <!-- version 1.5.3  both must match version-->
+
     <script data-require="ui-router@0.2.15" data-semver="0.2.15" src="//rawgit.com/angular-ui/ui-router/0.2.15/release/angular-ui-router.js"></script>
     <script data-require="ui-router-extras@0.0.13" data-semver="0.0.13" src="https://rawgit.com/christopherthielen/ui-router-extras/0.0.13/release/ct-ui-router-extras.js"></script>
-    <script data-require="angular-animate@1.3.16" data-semver="1.3.16" src="https://code.angularjs.org/1.3.16/angular-animate.js"></script>
+
+
     <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.js"></script>
     <script src="../Scripts/angular-ui/ui-bootstrap-tpls.js"></script>
 
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="statevis.css" />
+    <link href="../Content/bootstrap.css" rel="stylesheet" />
+   
     
 
     <script src="script.js"></script>
@@ -22,7 +29,7 @@
     <div ui-view="modal" class="modal"></div>
     <div ui-view="modal2" class="modal"></div>
     <state-vis style="position:relative; bottom: 0;"></state-vis>
-    <div style="width: 100%; position:fixed; top: 0;">
+    <div style="width: 100%; position:relative; top: 0;">
         <pre>Browser location: {{$location.absUrl()}}</pre>
     </div>
 
