--- a/UIRouter_Extras/UIRouter_Extras/app/pages/survey.html
+++ b/UIRouter_Extras/UIRouter_Extras/app/pages/survey.html
@@ -9,11 +9,6 @@
 </div>
 <br />
 <button class="btn" ng-click="save()">Save</button>
-<!--<form name="form">
-    <textarea rows="5" cols="55"></textarea>
-</form>
-    <br>
+<button class="btn" ng-click="open({firstname: 'firstname', lastname: 'lastname'})">Open me!</button>
+<div ng-show="user.firstname">Got back from modal: {{ user | json}}</div>
 
-    How do you like your things?
-    <br>
-    <textarea rows="5" cols="55"></textarea>-->
